MH-2620 changed pathes like in the "Install from Source" tutorial provided
git-svn-id: https://opencast.jira.com/svn/MH/trunk@6158 e6edf6fb-f266-4316-afb4-e53d95876a76